[package]
name = "rust-serv"
version = "0.2.0"
edition = "2021"
authors = ["Marvin <imnull@outlook.com>"]
description = "A high-performance, secure, and feature-rich HTTP static file server in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/imnull/rust-serv"
homepage = "https://github.com/imnull/rust-serv"
readme = "README.md"
keywords = ["http", "server", "static-files", "web-server", "hyper"]
categories = ["web-programming::http-server", "network-programming"]

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
bytes = "1.9"

# HTTP server
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body = "1.0"
http-body-util = "0.1"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
urlencoding = "2.1"

# File system watching
notify = "7.0"

# MIME types
mime_guess = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Compression
flate2 = "1.0"
brotli = "7.0"

# TLS
rustls-pemfile = "2.2"
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring", "std"] }
instant-acme = "0.7"
x509-parser = "0.16"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async utilities
futures = "0.3"

# Time formatting
time = { version = "0.3", features = ["formatting", "local-offset"] }

# WebSocket support
tokio-tungstenite = "0.26"
tungstenite = "0.26"
base64 = "0.22"
sha1 = "0.10"

[dev-dependencies]
# Testing
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tempfile = "3.14"
proptest = "1.5"
criterion = "0.5"
rcgen = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bench]]
name = "performance"
harness = false